<resources>
    <string name="app_name">Class Tracker</string>
    <string name="term_button_text">View Terms</string>
    <string name="course_button_text">View Courses</string>
    <string name="assessment_button_text">View Assessments</string>
    <string name="main_activity_text">Select an option below</string>
    <string name="edit_term">Edit Term</string>
    <string name="add_term">Add Term</string>
    <string name="edit_course">Edit Course</string>
    <string name="add_course">Add Course</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="name">Name:</string>
    <string name="email">Email Address:</string>
    <string name="phone">Phone Number:</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="courses">Courses:</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="title">Title:</string>
    <string name="assessments">Assessments:</string>
    <string name="status">Status:</string>
    <string name="notes">Notes:</string>
    <string name="finish_by">Finish By:</string>
    <string name="objective">Objective</string>
    <string name="mentors">Mentors:</string>
    <string name="alarm_on">Alarm On</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="title_activity_main">C196 Project</string>
    <string name="title_activity_term">All Terms</string>
    <string name="title_activity_course">All Courses</string>
    <string name="title_activity_assessment">All Assessments</string>
    <string name="share">Share</string>
    <string name="add">Add</string>
    <string name="report_button_text">View Reports</string>
    <string name="search">Search</string>
    <string name="reports">Reports</string>
    <string name="courses_per_term">Courses Per Term</string>
    <string name="assessments_in_the_next_week">Assessments in the Next Week</string>
    <string name="courses_per_term_report_header">Courses Per Term Report</string>
    <string name="select_a_term">Select a term</string>
    <string name="assessments_in_the_next_week_report_header">Assessments in the Next Week</string>
    <string name="no_terms_found">No terms found</string>
    <string name="no_assessments_found">No assessments found</string>
</resources>
